GG - renamed activitiesById to activitiesByFacilityId since there are multiple calls by id (activity id, rec id, etc...)  so being specific is important.
